<resources>
    <string name="app_name">HagoTestYMeMuevoUnMontón</string>
    <string name="contra">Contraseña</string>
    <string name="contra_blanco">¡No puedes dejar la contraseña en blanco!</string>
    <string name="Contra_nueva">Introduce una contraseña</string>
    <string name="btn_entrar">Entrar</string>
    <string name="HacerFoto">¿Cómo deseas hacer la foto?</string>
    <string name="Camara">Cámara</string>
    <string name="Galeria">Galería</string>
    <string name="SinPermiso">Sin permiso de escritura no hay foto de calidad</string>
    <string name="NecesitasCamara">Necesitas instalar o tener una cámara.</string>
    <string name="NotifiM">Bienvenido de nuevo Chaval/a</string>
    <string name="NotifiM1">Pulsa para ver tus datos de la última vez</string>
    <string name="Datos">Aquí tienes tus últimos datos</string>
    <string name="Resultado">"Tú ult puntuación "</string>
    <string name="puntos">" puntos"</string>
    <string name="Recorrido">"Has recorrido "</string>
    <string name="metrosult">" metros desde la utl vez"</string>
    <string name="nodata">No hay datos guardados en las Tablas</string>
    <string name="Sinper">No tienes permisos.</string>
    <string name="Necesitocosas">Debes darme persmisos para continuar</string>
    <string name="btn_Ajustes">Ajustes</string>
    <string name="btn_jugar">Jugar</string>
    <string name="btn_Preparar">Preparar</string>
    <string name="InsertarPregunta">Pregunta insertada Correctamente</string>
    <string name="ErrorInsercion">Error en la inserción</string>
    <string name="Borrado">Borrado Correctamente</string>
    <string name="SinBorrar">No se ha borrado nada</string>
    <string name="Modificado">Pregunta modificada Correctamente</string>
    <string name="SinInsertar">Error en la inserción</string>
    <string name="Nadaquever">Nada que mostrar</string>
    <string name="IDP">ID</string>
    <string name="PREGUNTA">Pregunta</string>
    <string name="respuestac">Repuesta Correcta</string>
    <string name="respuestai">Respuesta Incorrecta</string>
    <string name="btn_insertar">Insertar</string>
    <string name="btn_modificar">Modificar</string>
    <string name="btn_borrar">Borrar</string>
    <string name="minutoscorrectos">Debes poner los minutos correctamente</string>
    <string name="resultadosmios">Estos son mis resultados</string>
    <string name="mogollon">¿Todavía no tienes esta app? A qué esperas mola mogollón</string>
    <string name="programaenvio">¿Qué programa quieres usar para Mandar los logros?</string>
    <string name="instalaapp">Intala una app de envío de email</string>
    <string name="DateBorrado">DATOS BORRADOS</string>
    <string name="dateBorradoExito">Los Datos se han borrado con exito</string>
    <string name="Sonido">¿Sonido?</string>
    <string name="Fechita">Fecha y Hora</string>
    <string name="logro">Logro</string>
    <string name="MinutosAlarma">Minutos Alarma</string>
    <string name="btn_Borrar_Datos">Borrar Datos</string>
    <string name="btn_Activar" >Activar</string>
    <string name="btnCompartir">Compartir</string>
    <string name="Hasacertado">"Has acerado "</string>
    <string name="de5">" de 5"</string>
    <string name="despliega">Despliega para ver más</string>
    <string name="lanota">"La nota que has sacado "</string>
    <string name="Enhorabuena">\"Enhorabuena, has acertado \"</string>
    <string name="preguntas">/5 preguntas</string>
    <string name="DatosVacios">Datos Vacíos</string>
    <string name="SeAcabo">¡SE ACABÓ EL JUEGO!</string>
    <string name="GraciasPorJugar">Muchas gracias por jugar, se te ha mandado una Notificación con tu nota</string>
    <string name="FechaHoraR">Fecha y Hora                 Resultado</string>
</resources>